[package]
name = "piton-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
piton = { path = "../lib"}
bytecheck = { path = "../../bytecheck/bytecheck", default-features = false }
bbqueue = { path = "../../bbqueue/core", features = ["alloc"] }
piton-bbq = { path = "../transports/bbq" }


[build-dependencies]
piton-build = {path = "../build" }
