[package]
name = "piton-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
piton = { path = "../lib"}
bytecheck = { git = "https://github.com/sphw/bytecheck.git", branch = "alloc-feature", default-features = false }
bbqueue = { git = "https://github.com/sphw/bbqueue.git", branch = "pluggable-storage", features = ["alloc"] }
piton-bbq = { path = "../transports/bbq" }


[build-dependencies]
piton-build = {path = "../build" }
