[package]
name = "piton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { git = "https://github.com/sphw/bytecheck.git", branch = "alloc-feature", default-features = false }
zerocopy = "0.6.1"
