[package]
name = "piton-bbq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piton = { path = "../../lib"}
bytecheck = { git = "https://github.com/sphw/bytecheck.git", branch = "alloc-feature", default-features = false }
bbqueue = { git = "https://github.com/sphw/bbqueue.git", branch = "pluggable-storage", features = ["alloc"] }
