[package]
name = "piton-multiqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piton = { path = "../../lib"}
bytecheck = { git = "https://github.com/sphw/bytecheck.git", branch = "alloc-feature", default-features = false }
multiqueue = "0.3"
